--- a/Sources/rapport.tex
+++ b/Sources/rapport.tex
@@ -197,7 +197,7 @@ D'où :
 \[ \esp[T_+^{x,y}]  = \sum_{n\geq 0} \P(T_+^{x,y}>n) \le  \sum_{n\geq 0} (1-\varepsilon)^{\left\lfloor\frac{n}{n_0}\right\rfloor} = \frac{n_0}{\varepsilon} \] 
 Les variables aléatoires $T_+^{x,y}$ étant positives, on a :
 
-\[ T_+ = \max_{x,y} \le T_+^{x,y} \\le \sum_{x,y} T_+^{x,y} \] 
+\[ T_+ = \max_{x,y}  T_+^{x,y} \le \sum_{x,y} T_+^{x,y} \] 
 
 D'ou l'on déduit que:
 \begin{equation*}
