--- a/Sources/rapport.tex
+++ b/Sources/rapport.tex
@@ -263,6 +263,7 @@ $\nu$ est donc une loi invariante. D'après l'unicité de probabilité invariant
 Il s'agit de montrer que $F^{bin}$ est croissante sur $(\E^{bin},\le)$.
 
 Soit $x,y \in \E^{bin}$, avec $x\le y$. Si $x=y$, le résultat est assuré. Supposons $x<y$. On distingue les cas selon les valeurs de $K$ et $U$. 
+\vspace{0.5cm}
 
 \begin{itemize}
 \item[\textbullet] Si $U>p$
