--- a/Sources/rapport.tex
+++ b/Sources/rapport.tex
@@ -4,7 +4,7 @@
 \usepackage[french]{babel}
 \usepackage{textcomp}
 \usepackage{amsmath,amssymb}
-%\usepackage[coverpage,fancysections]{polytechnique}
+\usepackage[coverpage,fancysections]{polytechnique}
 
 \def \P{\mathbb{P}}
 \def \E{\mathcal{E}}
@@ -290,16 +290,17 @@ Soit $x,y \in \E^{bin}$, avec $x\le y$. Si $x=y$, le résultat est assuré. Supp
 	\item Si $K\le x < y$, $F^{bin}(x) = x < y = F^{bin}(y)$
 	\end{itemize}
 \end{itemize}
-\vspace{0.5cm}
 
-Finalement,
 \begin{center}
- \underline{$F^{bin}$ est croissante sur  $(\E^{bin},\le)$.}
+ \underline{Finalement, $F^{bin}$ est croissante sur  $(\E^{bin},\le)$.}
 \end{center}
 
-\subsection{T7}
-Supposons que $F$ est croissante, alors $\forall n \in \mathbb{N}$, $F_{-n,0}$ est croissante.
-Donc $\forall x,y \in \E, F_{-n,0}(x)=F_{-n,0}(y) \iff F_{-n,0}(\hat{0})=F_{-n,0}(\hat{1})$.\\
+\subsection*{T7}
+Supposons que $F$ est croissante, alors $\forall n \in \mathbb{N}$, $F_{-n,0}$ est croissante. D'où :
+
+
+ \[\forall x,y \in \E, F_{-n,0}(x)=F_{-n,0}(y)\quad \iff \quad F_{-n,0}(\hat{0})=F_{-n,0}(\hat{1})\]
+
 On en déduit:
 \begin{center}
 \fbox{\begin{minipage}{0.5\textwidth}
@@ -307,14 +308,14 @@ On en déduit:
 \end{minipage}}
 \end{center}
 
-\subsection{T8}
-Comme on a montré que $T_+ \sim T_-$ dans la question $5$, estimer $\mathbb{E}[T_-]$ revient à trouver une estimation de $\mathbb{E}[T_+]$, avec $T_+=\inf{n\geq 0: F_{0,n}(\hat{0})=F_{0,n}(\hat{1})}$.\\
+\subsection*{T8}
+Comme on a montré que $T_+ \sim T_-$ dans la question $5$, estimer $\mathbb{E}[T_-]$ revient à trouver une estimation de $\mathbb{E}[T_+]$, avec $T_+=\inf\{n\geq 0: F_{0,n}(\hat{0})=F_{0,n}(\hat{1})\}$.\\
 Ainsi, d'après la question 4, on a:
-\[\esp[T_+]=\esp[T_+^{\hat{0},\hat{1}}]\leq \frac{n_0}{\epsilon}\] 
+\[\esp[T_+]=\esp[T_+^{\hat{0},\hat{1}}]\leq \frac{n_0}{\varepsilon}\] 
 D'où:
 \begin{center}
 \fbox{\begin{minipage}{0.5\textwidth}
-\[\esp[T_-]\leq \frac{n_0}{\epsilon}\] 
+\[\esp[T_-]\leq \frac{n_0}{\varepsilon}\] 
 \end{minipage}}
 \end{center}
 
