--- a/Sources/rapport.tex
+++ b/Sources/rapport.tex
@@ -296,11 +296,11 @@ La loi de $X^*$ est donc invariante par $F$. D'après l'unicité de probabilité
 \end{itemize}
 
 \subsection*{S3}
-Contrairement à ce que l'on espérait la simulation aboutit à un histogramme qui ressemble méchammenet à celui d'une loi binomiale $\text{Bin}(M,p)$.
+Contrairement à ce que l'on espérait la simulation aboutit à un histogramme qui ressemble méchamment à celui d'une loi binomiale $\text{Bin}(M,p)$.
 \begin{figure}[h]
 \center
 \includegraphics[width=11cm]{S3}
-\caption{Histogramme de $X^{++}$ pour $p=0.7$, $M=10$, 5000 lancers}
+\caption{Histogramme de $X^{**}$ pour $p=0.7$, $M=10$, 5000 lancers}
 \label{S3}
 
 \end{figure}
